# huggingface_exp

./: Dockerfile  Makefile  README.md  aaa.toml  docker-compose.yaml  pyproject.toml
working/: pyproject.toml
working/any2i/: .gitignore  control.py  converter.sh  frame2movie.py  i2i.py  movie2image.py  pipline_layered_diffusion.py  t2i.py  test.py  utils.py
working/any2i/upscale/: .gitignore  Makefile  convert_pt_to_bin.py  m2i.py  main.py  new.py
working/any2i/upscale/Real-ESRGAN/: .gitignore  frame2movie.py  movie2image.py
working/any2i/upscale/weight/mse840000_klf8anime/: config.json
