[tool.poetry]
name = "huggingface-exp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp38-cp38-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.1%2Bcu118-cp38-cp38-linux_x86_64.whl"}
transformers = "^4.29.2"
diffusers = "^0.16.1"
accelerate = "^0.19.0"
opencv-python = "^4.7.0.72"
omegaconf = "^2.3.0"
safetensors = "^0.3.1"
xformers = "^0.0.20"
controlnet-aux = "^0.0.5"
mediapipe = "^0.10.1"
rembg = "^2.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
